chore: Update page to use smaller font sizes and fix text alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,4 +8,5 @@
 		format("opentype");
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
